--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -39,9 +39,9 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-    <header>
+    <!-- <header>
       <h1>JolsAid</h1>
       <p> Welcome to JolsAid!</p>
-    </header>
+    </header> -->
   </body>
 </html>
